nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_default@default-height-60x3.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-height-60x3
  name_expression: "format!(\"default-height-60x{rows}\")"
  sequence: 3
---
version: 1
size:
  cols: 60
  rows: 3
screen: alternate
cursor:
  position:
    x: 2
    y: 2
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "▌ item-00                                                   "
  - "  24/24 ────────────────────────────────────────────────────"
  - ">                                                           "
styles:
  - row: 0
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 0
    start: 1
    end: 9
    background: "#666666"
    bold: true
  - row: 1
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 7
    end: 60
    foreground: "#c5c8c6"
    italic: true
