nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_default@default-height-60x5.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-height-60x5
  name_expression: "format!(\"default-height-60x{rows}\")"
  sequence: 1
---
version: 1
size:
  cols: 60
  rows: 5
screen: alternate
cursor:
  position:
    x: 2
    y: 4
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "  item-01                                                   "
  - "    detail-01-a                                             "
  - "▌ item-00                                                   "
  - "  24/24 ────────────────────────────────────────────────────"
  - ">                                                           "
styles:
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 9
    background: "#666666"
    bold: true
  - row: 3
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 3
    start: 7
    end: 60
    foreground: "#c5c8c6"
    italic: true
